<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <CheckBoxPreference android:title="Music"
        android:defaultValue="true"
        android:key="musicPreference"
        android:summary="Music On/Off"/>
    
    <VolumePreference android:title="Music Volume"	        
	        android:key="musicVolumePreference"
	        android:summary="Music Volume"
			android:defaultValue="50"/>  
			
    <com.bnotya.bnotyaapp.controls.SeekBarPreference
            android:defaultValue="50"
            android:dialogMessage="@string/settings_dialog_message"
            android:key="SEEKBAR_VALUE"
            android:max="100"
            android:summary="@string/settings_summary"
            android:text="@string/settings_unit"
            android:title="@string/settings_title" />
    

</PreferenceScreen>
