<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:bnotyaapp="http://schemas.android.com/apk/res-auto" >
    
 <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        bnotyaapp:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        bnotyaapp:showAsAction="never"
        android:title="@string/action_about"/>
    
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        bnotyaapp:showAsAction="never"
        android:title="@string/action_home"/>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        bnotyaapp:showAsAction="never"
        android:title="@string/action_exit"/>
    
</menu>
