<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bnotyaapp="http://schemas.android.com/apk/res-auto" >
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        bnotyaapp:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        bnotyaapp:showAsAction="never"
        android:title="@string/action_about"/>    

    <item android:id="@+id/action_open_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="collapseActionView|ifRoom" 
          bnotyaapp:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        bnotyaapp:showAsAction="never"
        android:title="@string/action_home"/>
    
</menu>
