<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bnotyaapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        bnotyaapp:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        bnotyaapp:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"
        bnotyaapp:showAsAction="never"/>
    <item
        android:id="@+id/action_open_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search"
        bnotyaapp:showAsAction="collapseActionView|ifRoom"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"
        bnotyaapp:showAsAction="never"/>

</menu>