<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"  >

      
<TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_main_menu" 
        android:layout_gravity="center_horizontal"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_tehilot"
        android:onClick="openTehilotPage"
        android:layout_gravity="center_horizontal"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_women_menu"
         android:onClick="openWomenPage"
         android:layout_gravity="center_horizontal"/>   

</LinearLayout>
