<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >   

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_main_women" 
        android:layout_gravity="center_horizontal"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_random_card"
        android:onClick="openRandomCard"
        android:layout_gravity="center_horizontal"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_women_list"
         android:onClick="openWomenList"
         android:layout_gravity="center_horizontal"/>   
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_trivia_page"
         android:onClick="openTriviaPage"
         android:layout_gravity="center_horizontal"/>
    
    </LinearLayout>
</LinearLayout>
