<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:background="@drawable/clean_background"
    android:padding="8dp" >

	<!-- Editext for Search -->
    <EditText android:id="@+id/inputSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:inputType="textVisiblePassword" />

	<ListView android:id="@+id/womenlist"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/inputSearch"
	    android:divider="@android:color/transparent"
		android:dividerHeight="4dp"	
		android:paddingTop="4dp" />
	
	<Button
        android:id="@+id/btnTriviaPage"
        android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openTriviaPage"
            android:text="@string/open_trivia_page"          
	        android:layout_margin="8dp"
	        android:background="@drawable/blue_button_selector" 
        	style="@style/ButtonText"  />
    
    <Button
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/btnTriviaPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openInsightList"
            android:text="@string/open_insight_list"         
	        android:layout_margin="8dp"
	        android:background="@drawable/blue_button_selector" 
        	style="@style/ButtonText"  />

</RelativeLayout>

